--- a/src/scss/components/navigation/_header-top-navigation.scss
+++ b/src/scss/components/navigation/_header-top-navigation.scss
@@ -27,7 +27,7 @@
         content: "";
         display: flex;
         height: 20px;
-        mask-image: url('../icons/hds/ui/link-external.svg');
+        mask-image: icon_url('hds/ui/link-external');
         mask-position: center;
         mask-repeat: no-repeat;
         mask-size: 14px;
