--- a/src/scss/components/paragraphs/_unit-search.scss
+++ b/src/scss/components/paragraphs/_unit-search.scss
@@ -76,7 +76,7 @@
         content: "";
         display: block;
         height: 20px;
-        mask-image: url('../icons/hds/ui/search.svg');
+        mask-image: icon_url('hds/ui/search');
         position: absolute;
         right: $spacing;
         top: 50%;
