--- a/src/scss/components/block/_react-and-share.scss
+++ b/src/scss/components/block/_react-and-share.scss
@@ -96,7 +96,7 @@
                 display: flex;
                 height: 24px;
                 margin-left: $spacing-half;
-                mask-image: url('../icons/hds/ui/face-neutral.svg');
+                mask-image: icon_url('hds/ui/face-neutral');
                 mask-position: center;
                 mask-repeat: no-repeat;
                 mask-size: 24px;
@@ -154,11 +154,11 @@
           }
 
           &:first-child .rns-label:after {
-            mask-image: url('../icons/hds/ui/face-smile.svg');
+            mask-image: icon_url('hds/ui/face-smile');
           }
 
           &:last-child .rns-label:after {
-            mask-image: url('../icons/hds/ui/face-sad.svg');
+            mask-image: icon_url('hds/ui/face-sad');
           }
         }
       }
@@ -240,7 +240,7 @@
               display: flex;
               height: 32px;
               margin-right: $spacing-half;
-              mask-image: url('../icons/hds/ui/share.svg');
+              mask-image: icon_url('hds/ui/share');
               mask-position: center;
               mask-repeat: no-repeat;
               mask-size: 32px;
@@ -284,19 +284,19 @@
           }
 
           &.rns-share-facebook .rns-share-button:before {
-            mask-image: url('../icons/hds/some/facebook.svg');
+            mask-image: icon_url('hds/some/facebook');
           }
 
           &.rns-share-whatsapp .rns-share-button:before {
-            mask-image: url('../icons/hds/some/whatsapp.svg');
+            mask-image: icon_url('hds/some/whatsapp');
           }
 
           &.rns-share-twitter .rns-share-button:before {
-            mask-image: url('../icons/hds/some/twitter.svg');
+            mask-image: icon_url('hds/some/twitter');
           }
 
           &.rns-share-email .rns-share-button:before {
-            mask-image: url('../icons/hds/ui/envelope.svg');
+            mask-image: icon_url('hds/ui/envelope');
           }
         }
       }
@@ -350,7 +350,7 @@
       display: flex;
       height: 24px;
       margin-left: $spacing;
-      mask-image: url('../icons/hds/ui/arrow-right.svg');
+      mask-image: icon_url('hds/ui/arrow-right');
       mask-position: center;
       mask-repeat: no-repeat;
       mask-size: 24px;
