--- a/src/scss/components/content/_cookie-compliance.scss
+++ b/src/scss/components/content/_cookie-compliance.scss
@@ -24,7 +24,7 @@
       display: flex;
       height: $spacing-double;
       margin-right: $spacing-half;
-      mask-image: url('../icons/hds/ui/info-circle.svg');
+      mask-image: icon_url('hds/ui/info-circle');
       mask-position: center;
       mask-repeat: no-repeat;
       mask-size: $spacing-double;
