--- a/src/scss/components/content/_errand-service.scss
+++ b/src/scss/components/content/_errand-service.scss
@@ -56,7 +56,7 @@
         flex-shrink: 0;
         height: 24px;
         margin-right: $spacing-half;
-        mask-image: url('../icons/hds/ui/globe.svg');
+        mask-image: icon_url('hds/ui/globe');
         mask-position: center;
         mask-repeat: no-repeat;
         mask-size: 24px;
