--- a/src/scss/components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/components/navigation/_header-bottom-navigation.scss
@@ -186,7 +186,7 @@
             content: "";
             display: flex;
             height: 20px;
-            mask-image: url('../icons/hds/ui/link-external.svg');
+            mask-image: icon_url('hds/ui/link-external');
             mask-position: center;
             mask-repeat: no-repeat;
             mask-size: 20px;
