--- a/src/scss/components/block/_language-switcher.scss
+++ b/src/scss/components/block/_language-switcher.scss
@@ -3,7 +3,7 @@
   order: 3;
   padding: 12px $spacing;
   position: relative;
-  transition: all .3s ease;
+  transition: all .3s ease 1s; // The transition delay here combats a bit for the accidental scroll ups during scrolling
   width: calc(100% + #{$spacing-double});
   z-index: 0;
 
@@ -17,6 +17,7 @@
 
   &.scroll-up {
     margin-top: -48px;
+    transition-delay: 0s; // Transition delay should be 0 when hiding the switcher
 
     @include breakpoint($breakpoint-m) {
       margin-top: 0;
