--- a/src/scss/components/icons/_icons.scss
+++ b/src/scss/components/icons/_icons.scss
@@ -3,7 +3,7 @@
 // Icons
 //
 .icon {
-  --icon-proportions: 1.5rem;
-  height: var(--icon-proportions);
-  width: var(--icon-proportions);
+  --icon-size: 1.5rem;
+  height: var(--icon-size);
+  width: var(--icon-size);
 }
