--- a/src/scss/components/navigation/_branding-navigation.scss
+++ b/src/scss/components/navigation/_branding-navigation.scss
@@ -28,6 +28,7 @@
       display: block;
 
       @include breakpoint(440px) {
+        --icon-size: #{$spacing-and-half};
         margin-bottom: $spacing-quarter;
       }
     }
