--- a/src/scss/components/block/_branding.scss
+++ b/src/scss/components/block/_branding.scss
@@ -46,6 +46,7 @@
 .mm-wrapper_opened {
   .block--branding {
     .logo--header .icon {
+      --icon-size: $spacing-and-half;
       @include breakpoint(max-width 440px) {
         opacity: 0;
         pointer-events: none;
