--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -20,16 +20,16 @@ a.hds-button {
     }
 
     &:before {
-      --icon-proportions: #{$spacing-and-half};
+      --icon-size: #{$spacing-and-half};
       background-color: var(--color);
       content: "";
       display: inline-block;
-      height: var(--icon-proportions);
+      height: var(--icon-size);
       mask-repeat: no-repeat;
-      mask-size: var(--icon-proportions);
+      mask-size: var(--icon-size);
       order: 3;
       position: static;
-      width: var(--icon-proportions);
+      width: var(--icon-size);
     }
 
     &:hover {
