--- a/src/scss/components/paragraphs/_list-of-links.scss
+++ b/src/scss/components/paragraphs/_list-of-links.scss
@@ -110,10 +110,10 @@ $item_spacing: $spacing-triple;
     }
 
     .icon {
-      --icon-proportions: 1.5rem;
+      --icon-size: 1.5rem;
 
       @include breakpoint($breakpoint-s) {
-        --icon-proportions: 3rem;
+        --icon-size: 3rem;
       }
     }
   }
@@ -161,10 +161,10 @@ $item_spacing: $spacing-triple;
       }
 
       .icon {
-        --icon-proportions: 2rem;
+        --icon-size: 2rem;
 
         @include breakpoint($breakpoint-s) {
-          --icon-proportions: 3rem;
+          --icon-size: 3rem;
         }
       }
     }
