--- a/src/scss/components/misc/_image-placeholder.scss
+++ b/src/scss/components/misc/_image-placeholder.scss
@@ -5,7 +5,7 @@
   position: relative;
   width: 100%;
 
-  .icon,.hel-icon {
+  .hel-icon {
     --icon-size: 50%;
     color: var(--hdbt-color-palette-text--primary);
     left: 25%;
