--- a/src/scss/components/navigation/_breadcrumb.scss
+++ b/src/scss/components/navigation/_breadcrumb.scss
@@ -14,7 +14,7 @@
     padding: $spacing $spacing-double;
   }
 
-  .icon {
+  .hel-icon {
     display: none;
 
     @include breakpoint($breakpoint-m) {
