--- a/src/scss/components/navigation/_menu.scss
+++ b/src/scss/components/navigation/_menu.scss
@@ -1,5 +1,5 @@
 // Default menu configuration.
-.menu .menu__item a .icon {
+.menu .menu__item a .hel-icon {
   // Hide icons by default so that they aren't displayed accidentally somewhere where they have no styles defined.
   display: none;
 }
