--- a/src/scss/components/paragraphs/_accordion.scss
+++ b/src/scss/components/paragraphs/_accordion.scss
@@ -60,7 +60,7 @@
       margin-right: $spacing;
     }
 
-    .icon {
+    .hel-icon {
       --icon-size: 1.5rem;
 
       @include breakpoint($breakpoint-l) {
