--- a/src/scss/component-library.scss
+++ b/src/scss/component-library.scss
@@ -18,7 +18,7 @@
     position: relative;
     z-index: 1;
 
-    .icon,.hel-icon {
+    .hel-icon {
       --icon-size: 2.5rem;
     }
   }
@@ -148,7 +148,7 @@
 .component-library__icon__svg {
   padding: $spacing-half;
 
-  .icon,.hel-icon {
+  .hel-icon {
     --icon-size: 4rem;
   }
 }
