--- a/src/scss/components/block/_social-media.scss
+++ b/src/scss/components/block/_social-media.scss
@@ -9,7 +9,6 @@
 .social-media__items {
   @include flex-gap($spacing-half);
   display: flex;
-  line-height: 0;
   margin-bottom: $spacing-double;
   margin-top: $spacing;
 }
@@ -19,7 +18,7 @@
   list-style: none;
   text-decoration: none;
 
-  .icon,.hel-icon {
+  .hel-icon {
     --icon-size: #{$spacing-double};
   }
 
