--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -55,7 +55,7 @@
       font-weight: 700;
       width: 100%;
 
-      .icon {
+      .hel-icon {
         margin-right: $spacing-half;
       }
     }
@@ -178,12 +178,13 @@
     }
 
     .unit__contact-row__label {
+      @include font-size(16px, 24px);
       align-items: flex-start;
       display: flex;
       font-weight: 600;
       margin-bottom: 8px;
 
-      .icon {
+      .hel-icon {
         margin-left: -$spacing-double;
         margin-right: $spacing-half;
       }
@@ -507,6 +508,10 @@
       top: 0;
       width: 100%;
     }
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .unit__title {
@@ -574,6 +579,7 @@
   }
 
   .unit__read-more {
+      @include font-size(16px, 24px);
     display: flex;
     margin-top: $spacing-double;
 
@@ -583,12 +589,20 @@
     }
 
     .unit__read-more__text {
-      @include font-size(16px, 24px);
       font-weight: 500;
     }
 
-    .icon {
+    .hel-icon {
       margin-left: $spacing-half;
+      transition: $hover-link-arrow-transition;
+    }
+  }
+
+  &:hover {
+    .unit__read-more {
+      .hel-icon {
+        transform: translateX($spacing-quarter);
+      }
     }
   }
 }
