--- a/src/scss/components/navigation/_sidebar-menu.scss
+++ b/src/scss/components/navigation/_sidebar-menu.scss
@@ -153,7 +153,7 @@
           display: block;
         }
 
-        .menu__toggle-button .icon {
+        .menu__toggle-button .hel-icon {
           transform: rotate(180deg);
         }
       }
