--- a/src/scss/components/paragraphs/_accordion.scss
+++ b/src/scss/components/paragraphs/_accordion.scss
@@ -25,7 +25,7 @@
       background-color: transparent;
 
       &::after {
-        background-image: icon_url('hds/ui/angle-up');
+        transform: translateY(-50%) rotate(180deg);
       }
     }
 
@@ -34,7 +34,7 @@
     &.handorgel__header--focus .accordion-item__button--toggle {
       position: relative;
 
-      &::after {
+      &::before {
         border-radius: 2px;
         box-shadow: 0 0 0 3px $color-black-90;
         pointer-events: none;
@@ -81,6 +81,20 @@
       padding: $spacing-and-half 60px $spacing-and-half 0;
     }
 
+    &::before {
+      content: "";
+      height: 30px;
+      position: absolute;
+      right: 4px; // Move the icon slightly to the left
+      top: 50%;
+      transform: translateY(-50%);
+      width: 30px;
+
+      @include breakpoint($breakpoint-l) {
+        height: 32px;
+        width: 32px;
+      }
+    }
     &::after {
       background-image: icon_url('hds/ui/angle-down');
       background-position: center;
@@ -92,6 +106,7 @@
       right: 4px; // Move the icon slightly to the left
       top: 50%;
       transform: translateY(-50%);
+      transition: $rotating-icon-transition;
       width: 30px;
 
       @include breakpoint($breakpoint-l) {
@@ -195,6 +210,7 @@
         padding: $spacing-and-half ($spacing-double + 50px) $spacing-and-half $spacing-and-half;
       }
 
+      &::before,
       &::after {
         right: $spacing;
 
