--- a/src/scss/components/paragraphs/_list-of-links.scss
+++ b/src/scss/components/paragraphs/_list-of-links.scss
@@ -94,11 +94,16 @@ $item_spacing: $spacing-triple;
     }
   }
 
+  .list-of-links__item__link:hover .list-of-links__item__title {
+    text-decoration: underline;
+  }
+
   .list-of-links__item__arrow {
     display: block;
     line-height: 0;
     margin-left: -$spacing-quarter;
     margin-top: $spacing-half;
+    transition: $hover-link-arrow-transition;
 
     @include breakpoint($breakpoint-s) {
       margin-left: -$spacing-half;
@@ -115,6 +120,12 @@ $item_spacing: $spacing-triple;
       @include breakpoint($breakpoint-s) {
         --icon-size: 3rem;
       }
+    }
+  }
+
+  &:hover {
+    .list-of-links__item__arrow {
+      transform: translateX($spacing);
     }
   }
 }
@@ -151,7 +162,6 @@ $item_spacing: $spacing-triple;
     }
 
     .list-of-links__item__arrow {
-      line-height: 0;
       // Pull the arrow a bit higher to match the text line-height.
       margin: -2px 0 0 $spacing;
 
