--- a/src/scss/components/block/_react-and-share.scss
+++ b/src/scss/components/block/_react-and-share.scss
@@ -296,7 +296,7 @@
           }
 
           &.rns-share-email .rns-share-button:before {
-            mask-image: icon_url('email');
+            mask-image: icon_url('hdbt/some/email');
           }
         }
       }
