--- a/src/scss/components/content/_news-page.scss
+++ b/src/scss/components/content/_news-page.scss
@@ -36,7 +36,7 @@
   padding-bottom: 0;
   width: 100%;
   &::before {
-    @include pseudo-icon('hds/ui/camera', $spacing, $color-black-90, block);
+    @include pseudo-icon('camera', $spacing, $color-black-90, block);
   }
 }
 
