--- a/src/scss/components/paragraphs/_accordion.scss
+++ b/src/scss/components/paragraphs/_accordion.scss
@@ -96,7 +96,7 @@
       }
     }
     &::after {
-      background-image: icon_url('hds/ui/angle-down');
+      background-image: icon_url('angle-down');
       background-position: center;
       background-repeat: no-repeat;
       background-size: 100%;
