--- a/src/scss/components/paragraphs/_service-list.scss
+++ b/src/scss/components/paragraphs/_service-list.scss
@@ -47,7 +47,7 @@
         content: "";
         display: block;
         height: 20px;
-        mask-image: icon_url('hds/ui/search');
+        mask-image: icon_url('search');
         position: absolute;
         right: $spacing;
         top: 50%;
