--- a/src/scss/components/paragraphs/_sidebar-text.scss
+++ b/src/scss/components/paragraphs/_sidebar-text.scss
@@ -136,7 +136,7 @@
         display: inline-block;
         height: 24px;
         justify-self: end;
-        mask-image: icon_url('hds/ui/arrow-right');
+        mask-image: icon_url('arrow-right');
         mask-repeat: no-repeat;
         mask-size: 24px;
         order: 3;
