--- a/src/scss/components/content/_basic-page.scss
+++ b/src/scss/components/content/_basic-page.scss
@@ -92,7 +92,7 @@
   }
 
   a::after {
-    @include pseudo-icon('hds/ui/arrow-right', $spacing-and-half);
+    @include pseudo-icon('arrow-right', $spacing-and-half);
     margin-left: $spacing-quarter;
   }
 }
