--- a/src/scss/components/navigation/_link.scss
+++ b/src/scss/components/navigation/_link.scss
@@ -11,7 +11,7 @@ a.link[target="_blank"] {
     display: block;
     height: 16px;
     margin: 0 0.1em 0.3em 0.2em;
-    mask-image: icon_url('hds/ui/link-external');
+    mask-image: icon_url('link-external');
     mask-position: center;
     mask-repeat: no-repeat;
     mask-size: 16px;
