--- a/src/scss/components/paragraphs/_map.scss
+++ b/src/scss/components/paragraphs/_map.scss
@@ -41,7 +41,7 @@
       display: block;
       height: 0.9em;
       margin: 0 0.1em 0.3em 0.2em;
-      mask-image: icon_url('hds/ui/link-external');
+      mask-image: icon_url('link-external');
       width: 0.9em;
     }
   }
