UHF-3635: Fix icon positions

--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -25,6 +25,7 @@ a.hds-button {
       content: "";
       display: inline-block;
       height: var(--icon-size);
+      mask-position: center center;
       mask-repeat: no-repeat;
       mask-size: var(--icon-size);
       order: 3;
