--- a/src/scss/components/icons/_hdbt-icon.scss
+++ b/src/scss/components/icons/_hdbt-icon.scss
@@ -6,6 +6,7 @@
     content: "";
     display: inline-block;
     height: var(--icon-size);
+    mask-position: center center;
     mask-repeat: no-repeat;
     mask-size: var(--icon-size);
     min-height: var(--icon-size);
