--- a/templates/form/select/select.html.twig
+++ b/templates/form/select/select.html.twig
@@ -26,6 +26,7 @@
           {% endif %}
         {% endfor %}
       </select>
+      <p class="visually-hidden" aria-live="polite"></p>
       <span class="hdbt--select-focus"></span>
     </div>
   {% else %}
@@ -43,6 +44,7 @@
           {% endif %}
         {% endfor %}
       </select>
+      <p class="visually-hidden" aria-live="polite"></p>
       <span class="hdbt--select-focus"></span>
       <i class="hds-icon hds-icon--angle-down hds-icon--size-m" aria-hidden="true" style="vertical-align: middle"></i>
     </div>
