--- a/templates/form/select/select.html.twig
+++ b/templates/form/select/select.html.twig
@@ -44,7 +44,7 @@
         {% endfor %}
       </select>
       <span class="hdbt--select-focus"></span>
-      <i class="hds-icon hds-icon--angle-down hds-icon--size-m" aria-hidden="true" style="vertical-align: middle"></i>
+      <i class="hel-icon hel-icon--angle-down" aria-hidden="true"></i>
     </div>
   {% endif %}
 {% endapply %}
