--- a/templates/misc/tag.html.twig
+++ b/templates/misc/tag.html.twig
@@ -19,7 +19,7 @@
       <span class="{{ classes|join(' ') }}">{{ label }}</span>
       {% if type == 'deletable' %}
         <button aria-label="{{ 'Delete item'|t }}" class="hds-tag__delete-button button-reset">
-          <span aria-hidden="true" class="hds-icon hds-icon--cross"></span>
+          <span aria-hidden="true" class="hel-icon hel-icon--cross"></span>
         </button>
       {% endif %}
     </div>
