--- a/templates/button/button.html.twig
+++ b/templates/button/button.html.twig
@@ -2,11 +2,13 @@
 /**
  * @file
  * Button example.
+ *
+ * TODO: Refactor hds-button.
  */
 #}
 
 <button type="button" class="hds-button {% if type %}{{ 'hds-button--' ~ type }}{% endif %} {% if size %}{{ 'hds-button--' ~ size }}{% endif %}" {% if disabled == true %}disabled{% endif %}>
-  {% if icon_first == true %}<span aria-hidden="true" class="hds-icon {{ 'hds-icon--' ~ icon_first_type }}"></span>{% endif %}
+  {% if icon_first == true %}<span aria-hidden="true" class="hel-icon {{ 'hel-icon--' ~ icon_first_type }}"></span>{% endif %}
   <span class="hds-button__label">{{ label }}</span>
-  {% if icon_last == true %}<span aria-hidden="true" class="hds-icon {{ 'hds-icon--' ~ icon_last_type }}"></span>{% endif %}
+  {% if icon_last == true %}<span aria-hidden="true" class="hel-icon {{ 'hel-icon--' ~ icon_last_type }}"></span>{% endif %}
 </button>
